Uploaded The Files

--- a/src/main/resources/assets/skeletalremains/lang/en_us.json
+++ b/src/main/resources/assets/skeletalremains/lang/en_us.json
@@ -1,9 +1,14 @@
 {
+  "entity.skeletalremains.overgrownskeleton": "Overgrown",
+  "entity.skeletalremains.sharpshooterskeleton": "Sharpshooter",
+  "entity.skeletalremains.charredskeleton": "Charred",
   "entity.skeletalremains.sunkenskeleton": "Sunken",
+  "entity.skeletalremains.fallenskeleton": "Fallen",
 
   "item.skeletalremains.overgrown_spawn_egg": "Overgrown Spawn Egg",
   "item.skeletalremains.sharpshooter_spawn_egg": "Sharpshooter Spawn Egg",
   "item.skeletalremains.charred_spawn_egg": "Charred Spawn Egg",
   "item.skeletalremains.sunken_spawn_egg": "Sunken Spawn Egg",
+  "item.skeletalremains.fallen_spawn_egg": "Fallen Spawn Egg",
   "item.skeletalremains.tidal_arrow": "Tidal Arrow"
 }
